--- a/error.html
+++ b/error.html
@@ -1,31 +1,3 @@
-<?
-    error_reporting(E_ALL ^ E_NOTICE);
-    ini_set('display_errors', TRUE);
-
-    $status = $_SERVER['REDIRECT_STATUS'];
-    $codes = array(
-        400 => array('401 Unauthorized', ''),
-        401 => array('402 Payment Required', ''),
-        403 => array('403 Forbidden', ''),
-        404 => array('404 Not Found', ''),
-        405 => array('405 Method Not Allowed', ''),
-        406 => array('406 Not Acceptable', ''),
-        408 => array('408 Request Timeout', ''),
-        409 => array('409 Conflict', ''),
-        413 => array('413 Request Entity Too Large', ''),
-        414 => array('414 Request-URI Too Large', ''),
-        500 => array('500 Internal Server Error', ''),
-        500 => array('501 Not Implemented', ''),
-        502 => array('502 Bad Gateway', ''),
-        504 => array('504 Gateway Timeout', ''),
-    );
-
-    $title = $codes[$status][0];
-    $message = $codes[$status][1];
-    if ($title == false || strlen($status) != 3) {
-        $message = 'Please supply a valid status code.';
-    }
-?>
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -33,27 +5,27 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" itemscope itemtype="http://schema.org"><!--<![endif]-->
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Sete Três - http://setetres.st"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <meta name="author" content="Sete Três - http://setetres.st">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>▄▀▄▀▄▀▄ 73 HP ▄▀▄ <?=$title?></title>
-        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <link rel="canonical" href="http://1997.setetres.st"/>
+        <title>▄▀▄▀▄▀▄ 73 HP ▄▀▄ </title>
+        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <link rel="canonical" href="http://1997.setetres.st">
 
-        <meta property="og:type" content="website"/>
-        <meta property="og:title" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄ <?=$title?>"/>
-        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta property="og:image" content="http://1997.setetres.st/img/facebook.jpg"/>
-        <meta property="og:url" content="http://1997.setetres.st"/>
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄ ">
+        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta property="og:image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta property="og:url" content="http://1997.setetres.st">
 
-        <meta itemprop="name" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄ <?=$title?>"/>
-        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta itemprop="image" content="http://1997.setetres.st/img/facebook.jpg"/>
-        <meta itemprop="url" content="http://1997.setetres.st"/>
+        <meta itemprop="name" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄ ">
+        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta itemprop="image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta itemprop="url" content="http://1997.setetres.st">
 
-        <link rel="icon" href="favicon.ico"/>
-        <link rel="stylesheet" href="../css/normalize.css"/>
-        <link rel="stylesheet" href="../css/main.css"/>
+        <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
 
         <script src="js/modernizr.js"></script>
     </head>
@@ -63,7 +35,7 @@
                 <tbody>
                     <tr>
                         <td align="left" valign="top">
-                            <img src="../img/pagerror.gif" alt="Page error">
+                            <img src="img/pagerror.gif" alt="Page error">
                         </td>
                         <td>
                             <h1>
@@ -82,7 +54,7 @@
                             <p>Please try the following:</p>
                             <ul>
                                 <li>
-                                    Click the <a href="#" class="error-sound"><img src="../img/refresh.gif" alt="Refresh?"/> Refresh</a> button, or try again later.
+                                    Click the <a href="#" class="error-sound"><img src="img/refresh.gif" alt="Refresh?"> Refresh</a> button, or try again later.
                                 </li>
                                 <li>
                                     If you typed the page address in the Address bar, make sure that it is spelled correctly.
@@ -91,7 +63,7 @@
                                     To check your connection settings, click the <strong>Tools</strong> menu, and then click <strong>Internet Options</strong>. On the <strong>Connections</strong> tab, click <strong>Settings</strong>. The settings should match those provided by your local area network (LAN) administrator or Internet service provider (ISP).
                                 </li>
                                 <li>
-                                    If your Network Administrator has enabled it, Microsoft Windows can examine your network and automatically discover network connection settings. If you would like Windows to try and discover them,<br>click <a href="#" class="error-sound"><img src="../img/search.gif" alt="Search?"/> Detect Network Settings</a>
+                                    If your Network Administrator has enabled it, Microsoft Windows can examine your network and automatically discover network connection settings. If you would like Windows to try and discover them,<br>click <a href="#" class="error-sound"><img src="img/search.gif" alt="Search?"> Detect Network Settings</a>
                                 </li>
                                 <li>
                                     Some sites require 128-bit connection security. Click the <strong>Help</strong> menu and then click <strong> About Internet Explorer </strong> to determine what strength security you have installed.
@@ -100,7 +72,7 @@
                                     If you are trying to reach a secure site, make sure your Security settings can support it. Click the <strong>Tools</strong> menu, and then click <strong>Internet Options</strong>. On the Advanced tab, scroll to the Security section and check settings for SSL 2.0, SSL 3.0, TLS 1.0, PCT 1.0.
                                 </li>
                                 <li>
-                                    Click the <a href="#" class="error-sound"><img src="../img/back.gif" alt="Back?"/> Back</a> button to try another link.
+                                    Click the <a href="#" class="error-sound"><img src="img/back.gif" alt="Back?"> Back</a> button to try another link.
                                 </li>
                             </ul>
                             <h2>
@@ -112,11 +84,12 @@
             </table>
         </div>
         <audio id="error" preload="auto">
-            <source src="../inc/error.mp3"/>
-            <source src="../inc/error.ogv"/>
+            <source src="inc/error.mp3">
+            <source src="inc/error.ogv">
         </audio>
-        <script src="../js/jquery.js"></script>
+        <script src="js/jquery.js"></script>
         <script>
+
             $(document).ready(function(){
                 $('.error-sound').click(function() {
                     $('#error')[0].play();
@@ -124,17 +97,32 @@
                 });
                 $('#error')[0].play();
             });
-        </script>
-        <script>
+
             (function() {
                 var sc = document.createElement('script');
                     sc.type = 'text/javascript';
                     sc.async = true;
-                    sc.src = 'http://files.setetres.st/js/dp.js';
+                    sc.src = '//setetres.s3.amazonaws.com/setetres.st/js/dp.js';
                 var s = document.getElementsByTagName('script')[0];
                     s.parentNode.insertBefore(sc, s);
             })();
+
+            (function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=271979272942836";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-6977973-1', 'auto');
+            ga('send', 'pageview');
+
         </script>
-<? include("../inc/analytics.php");?>
     </body>
 </html>
