--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<?php
-    error_reporting(E_ALL ^ E_NOTICE);
-    ini_set('display_errors', FALSE);
-?>
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -9,29 +5,29 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" itemscope itemtype="http://schema.org"><!--<![endif]-->
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Sete Três - http://setetres.st"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <meta name="author" content="Sete Três - http://setetres.st">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
         <title>▄▀▄▀▄▀▄ 73 HP ▄▀▄</title>
-        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <link rel="canonical" href="http://1997.setetres.st"/>
+        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <link rel="canonical" href="http://1997.setetres.st">
 
-        <meta property="og:type" content="website"/>
-        <meta property="og:title" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄"/>
-        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta property="og:image" content="http://1997.setetres.st/img/facebook.jpg"/>
-        <meta property="og:url" content="http://1997.setetres.st"/>
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄">
+        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta property="og:image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta property="og:url" content="http://1997.setetres.st">
 
-        <meta itemprop="name" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄"/>
-        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta itemprop="image" content="http://1997.setetres.st/img/facebook.jpg"/>
-        <meta itemprop="url" content="http://1997.setetres.st"/>
+        <meta itemprop="name" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄">
+        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta itemprop="image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta itemprop="url" content="http://1997.setetres.st">
 
-        <link rel="icon" href="favicon.ico"/>
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/main.css"/>
-        <link rel="stylesheet" href="css/main-responsive.css"/>
+        <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main-responsive.css">
 
         <script src="js/modernizr.js"></script>
     </head>
@@ -40,41 +36,41 @@
         <div id="wr" class="wr">
             <header>
                 <span class="error">&lt;!--</span>
-                <img src="img/just-hanging.gif" class="just-hanging-left" alt="Just"/>
-                <img src="img/just-hanging.gif" class="just-hanging-right" alt="Hanging"/>
-                <a href="#" class="fuck-you"><img src="img/fuck-you.gif"/></a>
+                <img src="img/just-hanging.gif" class="just-hanging-left" alt="Just">
+                <img src="img/just-hanging.gif" class="just-hanging-right" alt="Hanging">
+                <a href="#" class="fuck-you"><img src="img/fuck-you.gif"></a>
                 <div class="center">
                     <p class="welcome">
-                        <marquee><img src="img/welcome.gif" alt="Welcome to my homepage"/></marquee>
+                        <marquee><img src="img/welcome.gif" alt="Welcome to my homepage"></marquee>
                     </p>
                     <h1 class="logo">
-                        <img src="img/torch.gif" class="fl" alt="Burn!"/>
+                        <img src="img/torch.gif" class="fl" alt="Burn!">
                         <a href="/">Sete Três</a>
-                        <img src="img/torch.gif" class="fr" alt="Burn!"/>
+                        <img src="img/torch.gif" class="fr" alt="Burn!">
                     </h1>
                     <p class="under-construction">
-                        This page is <img src="img/under-construction.gif" alt="Under contruction"/> under contruction
+                        This page is <img src="img/under-construction.gif" alt="Under contruction"> under contruction
                     </p>
                 </div>
             </header>
             <div id="main" role="main" class="main">
-                <h2><img src="img/tit-about.gif" alt="About"/></h2>
+                <h2><img src="img/tit-about.gif" alt="About"></h2>
                 <div class="center">
                     <div class="borderBox">
-                        <img src="img/guilherme-pangnotta.gif" class="avatar" alt="Guilherme Pangnotta"/>
-                        <img src="img/broken.png" class="broken" alt="BrknImg"/>
+                        <img src="img/guilherme-pangnotta.gif" class="avatar" alt="Guilherme Pangnotta">
+                        <img src="img/broken.png" class="broken" alt="BrknImg">
                         <div class="info">
                             <marquee>
-                                Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.<br/>
-                                <a href="http://go.setetres.st/linkedin" rel="external"><img src="img/btn-more.gif" alt="More"/></a>
+                                Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.<br>
+                                <a href="http://go.setetres.st/linkedin" rel="external"><img src="img/btn-more.gif" alt="More"></a>
                             </marquee>
                         </div>
                     </div>
                 </div>
-                <h2><img src="img/tit-works.gif" alt="Works"/></h2>
+                <h2><img src="img/tit-works.gif" alt="Works"></h2>
                 <div class="center">
                     <div class="borderBox">
-                        <a href="http://newtonpaiva.br" rel="external"><img src="img/newton.gif" class="avatar" alt="Newton / HTML + CSS + JS"/></a>
+                        <a href="http://newtonpaiva.br" rel="external"><img src="img/newton.gif" class="avatar" alt="Newton / HTML + CSS + JS"></a>
                         <div class="info">
                             <marquee>
                                 Newton / HTML + CSS + JS
@@ -82,7 +78,7 @@
                         </div>
                     </div>
                     <div class="borderBox">
-                        <a href="http://belo2014.com.br" rel="external"><img src="img/belo2014.gif" class="avatar" alt="Belo 2014 / HTML + CSS + JS"/></a>
+                        <a href="http://belo2014.com.br" rel="external"><img src="img/belo2014.gif" class="avatar" alt="Belo 2014 / HTML + CSS + JS"></a>
                         <div class="info">
                             <marquee>
                                 Belo 2014 / HTML + CSS + JS
@@ -90,7 +86,7 @@
                         </div>
                     </div>
                     <div class="borderBox">
-                        <a href="http://jchebly.com.br" rel="external"><img src="img/jchebly.gif" class="avatar" alt="JCHEBLY / HTML + CSS + JS"/></a>
+                        <a href="http://jchebly.com.br" rel="external"><img src="img/jchebly.gif" class="avatar" alt="JCHEBLY / HTML + CSS + JS"></a>
                         <div class="info">
                             <marquee>
                                 JCHEBLY / HTML + CSS + JS
@@ -98,7 +94,7 @@
                         </div>
                     </div>
                     <div class="borderBox">
-                        <a href="http://superliga.jchebly.com.br" rel="external"><img src="img/superliga.gif" class="avatar" alt="JCHEBLY Superliga / HTML + CSS + JS"/></a>
+                        <a href="http://superliga.jchebly.com.br" rel="external"><img src="img/superliga.gif" class="avatar" alt="JCHEBLY Superliga / HTML + CSS + JS"></a>
                         <div class="info">
                             <marquee>
                                 JCHEBLY Superliga / HTML + CSS + JS
@@ -106,17 +102,17 @@
                         </div>
                     </div>
                 </div>
-                <h2><img src="img/tit-extras.gif" alt="Extras"/></h2>
+                <h2><img src="img/tit-extras.gif" alt="Extras"></h2>
                 <div class="center">
                     <p>
-                        <a href="http://inkstarter.cc" rel="external">InkStarter.cc &#8212; You draw. You vote. I tattoo myself!</a><br/>
-                        <a href="http://v2.setetres.st" rel="external">v2 &#8212; v2.0 of my website.</a><br/>
-                        <a href="http://v1.setetres.st" rel="external">v1 &#8212; Award winning v1.0 of my website.</a><br/>
-                        <a href="http://go.setetres.st/starter" rel="external">Starter &#8212; A quick-start responsive framework for frontend development.</a><br/>
+                        <a href="http://inkstarter.cc" rel="external">InkStarter.cc &#8212; You draw. You vote. I tattoo myself!</a><br>
+                        <a href="http://v2.setetres.st" rel="external">v2 &#8212; v2.0 of my website.</a><br>
+                        <a href="http://v1.setetres.st" rel="external">v1 &#8212; Award winning v1.0 of my website.</a><br>
+                        <a href="http://go.setetres.st/starter" rel="external">Starter &#8212; A quick-start responsive framework for frontend development.</a><br>
                         <a href="http://go.setetres.st/sasstarter" rel="external">Sasstarter &#8212; A quick-start responsive framework for frontend development with Sass.</a>
                     </p>
                 </div>
-                <h2><img src="img/tit-links.gif" alt="Links"/></h2>
+                <h2><img src="img/tit-links.gif" alt="Links"></h2>
                 <div class="center">
                     <ul class="links">
                         <li><a href="http://go.setetres.st/facebook" rel="external">Facebook</a></li>
@@ -131,11 +127,11 @@
                         <li><a href="http://go.setetres.st/like" rel="external"><i>♥</i></a></li>
                     </ul>
                 </div>
-                <h2><img src="img/tit-guestbook.gif" alt="Guestbook"/></h2>
+                <h2><img src="img/tit-guestbook.gif" alt="Guestbook"></h2>
                 <div class="borderBox guestbook">
                     <p>Before you leave please sign my guestbook. Thank you!!1</p>
                     <div class="fb-mask">
-                        <img src="img/baby.gif" alt="Dance Baby" class="baby"/>
+                        <img src="img/baby.gif" alt="Dance Baby" class="baby">
                         <div class="fb-comments" data-href="http://1997.setetres.st" data-colorscheme="dark" data-width="700" data-numposts="30"></div>
                     </div>
                 </div>
@@ -143,16 +139,16 @@
             <footer>
                 <div class="center">
                     <p class="vote">
-                        Click below and vote for 73 HP on iBest Top30!!~'<br/>
-                        <a href="/404"><img src="img/ibest.gif" alt="Please vote!"/></a>
+                        Click below and vote for 73 HP on iBest Top30!!~'<br>
+                        <a href="/404"><img src="img/ibest.gif" alt="Please vote!"></a>
                     </p>
-                    <p>You're the visitor<br/><img src="img/counter.gif" alt="Several visitors"/></p>
+                    <p>You're the visitor<br><img src="img/counter.gif" alt="Several visitors"></p>
                 </div>
             </footer>
         </div>
         <audio id="mid" loop="loop" autoplay="autoplay" preload="auto">
-            <source src="inc/carthage-blackout.mp3"/>
-            <source src="inc/carthage-blackout.ogv"/>
+            <source src="inc/carthage-blackout.mp3">
+            <source src="inc/carthage-blackout.ogv">
         </audio>
         <script src="js/jquery.js"></script>
         <script src="js/plugins.js"></script>
@@ -193,15 +189,32 @@
             titlebar(0);
         </script>
         <script>
+
             (function() {
                 var sc = document.createElement('script');
                     sc.type = 'text/javascript';
                     sc.async = true;
-                    sc.src = 'http://files.setetres.st/js/dp.js';
+                    sc.src = '//setetres.s3.amazonaws.com/setetres.st/js/dp.js';
                 var s = document.getElementsByTagName('script')[0];
                     s.parentNode.insertBefore(sc, s);
             })();
+
+            (function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=271979272942836";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-6977973-1', 'auto');
+            ga('send', 'pageview');
+
         </script>
-<? include("inc/analytics.php");?>
     </body>
 </html>
