--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" itemscope itemtype="http://schema.org"><!--<![endif]-->
+<html lang="en" itemscope itemtype="http://schema.org">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Sete Três - http://setetres.st">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="author" content="Sete Três — http://setetres.st">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>▄▀▄▀▄▀▄ 73 HP ▄▀▄</title>
-        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <title>Sete Três — 1997</title>
+        <meta name="description" content="v1.997 of my website.">
         <link rel="canonical" href="http://1997.setetres.st">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄">
-        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
-        <meta property="og:image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta property="og:title" content="Sete Três — 1997">
+        <meta property="og:description" content="v1.997 of my website.">
+        <meta property="og:image" content="http://1997.setetres.st/img/share-1997.png">
         <meta property="og:url" content="http://1997.setetres.st">
 
-        <meta itemprop="name" content="▄▀▄▀▄▀▄ 73 HP ▄▀▄">
-        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
-        <meta itemprop="image" content="http://1997.setetres.st/img/facebook.jpg">
+        <meta itemprop="name" content="Sete Três — 1997">
+        <meta itemprop="description" content="v1.997 of my website.">
+        <meta itemprop="image" content="http://1997.setetres.st/img/share-1997.png">
         <meta itemprop="url" content="http://1997.setetres.st">
 
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Sete Três — 1997">
+        <meta name="twitter:description" content="v1.997 of my website.">
+        <meta name="twitter:image" content="http://1997.setetres.st/img/share-1997.png">
+
+        <link rel="apple-touch-icon" href="img/icon.png">
         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -32,6 +35,7 @@
         <script src="js/modernizr.js"></script>
     </head>
     <body>
+        <p style="display: none;">Deprecated Page. Kept for historical purposes.</p>
         <div id="fb-root"></div>
         <div id="wr" class="wr">
             <header>
