--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 
         <title>Sete Três — 1997</title>
         <meta name="description" content="v1.997 of my website.">
-        <link rel="canonical" href="http://1997.setetres.st">
+        <link rel="canonical" href="https://1997.setetres.st">
 
+        <meta property="fb:app_id" content="155658704635453">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Sete Três — 1997">
         <meta property="og:description" content="v1.997 of my website.">
-        <meta property="og:image" content="http://1997.setetres.st/img/share-1997.png">
-        <meta property="og:url" content="http://1997.setetres.st">
+        <meta property="og:image" content="https://1997.setetres.st/img/share-1997.png">
+        <meta property="og:url" content="https://1997.setetres.st">
 
         <meta itemprop="name" content="Sete Três — 1997">
         <meta itemprop="description" content="v1.997 of my website.">
-        <meta itemprop="image" content="http://1997.setetres.st/img/share-1997.png">
-        <meta itemprop="url" content="http://1997.setetres.st">
+        <meta itemprop="image" content="https://1997.setetres.st/img/share-1997.png">
+        <meta itemprop="url" content="https://1997.setetres.st">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Sete Três — 1997">
         <meta name="twitter:description" content="v1.997 of my website.">
-        <meta name="twitter:image" content="http://1997.setetres.st/img/share-1997.png">
+        <meta name="twitter:image" content="https://1997.setetres.st/img/share-1997.png">
 
         <link rel="apple-touch-icon" href="img/icon.png">
         <link rel="icon" href="favicon.ico">
